cambio de rutas a su sitio adecuado, default cambiado, cinema mandado a su pagina

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,7 +45,7 @@ onMount(() => {
   <div class="mx-auto flex justify-between items-center px-4 md:px-8">
     <!-- Logo -->
     <div class="flex items-center">
-      <a href="/">
+      <a href="/cinema">
         <Image src={WahuDark2020} alt="Wahu Logo" class="h-16 w-auto" />
       </a>
     </div>
@@ -74,7 +74,7 @@ onMount(() => {
       <a href="/creators" class="nav-link hover:text-white text-gray-400 relative"
       >CREADORES<span class="nav-underline"></span></a
       > -->
-      <a href="/" class="nav-link hover:text-white text-gray-400 relative"
+      <a href="/cinema" class="nav-link hover:text-white text-gray-400 relative"
         >Cinema<span class="nav-underline"></span></a
       >
       <a
@@ -160,7 +160,7 @@ onMount(() => {
       <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400"
         >CREADORES</a
       > -->
-      <a href="/" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
+      <a href="/cinema" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
       <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400"
         >Festivales</a
       >
