--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,8 @@
 ---
 <html>
     <head>
-        <title>404 - Pagina no encontrada</title>
+        <meta charset="UTF-8" />
+        <title>404 - Página no encontrada</title>
     </head>
     <body class="flex h-screen items-center justify-center bg-zinc-100 dark:bg-principal">
         <div class="flex flex-col justify-center items-center text-center bg-white dark:bg-secundario rounded-lg shadow-lg px-10 py-8">
