--- a/src/pages/creators.astro
+++ b/src/pages/creators.astro
@@ -2,6 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 import CreatorsDetails from '../components/CreatorsDetails.astro'
 ---
+<head>
+    <meta charset="UTF-8" />
+    <title>Creador</title>
+</head>
 
 <Layout>
 	<CreatorsDetails />
