--- a/src/pages/details.astro
+++ b/src/pages/details.astro
@@ -5,6 +5,11 @@ import Carrousel from '../components/Carrousel.astro';
 import Production from '../components/Production.astro';
 import Cast from '../components/Cast.astro';
 ---
+<head>
+    <meta charset="UTF-8" />
+    <title>Detalles</title> 
+	<!-- abierto a que la ruta se cambie por el .map del id de la pelicula/serie -->
+</head>
 
 <Layout>
 	<DetailScreen />
