--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,15 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import HomeCinema from '../components/homeCinema.astro';
-import Carrousel from '../components/Carrousel.astro';
+import Layout from "../layouts/Layout.astro";
+// import HomeCinema from "../components/homeCinema.astro";
+import Login from "../pages/login.astro";
+import Carrousel from "../components/Carrousel.astro";
 ---
 
+<head>
+  <meta charset="UTF-8" />
+  <title>Wahu</title>
+</head>
+
 <Layout>
-  <HomeCinema />
-  <Carrousel />
-  <Carrousel />
-  <Carrousel />
+  <Login />
 </Layout>
