--- a/src/components/loginForm.astro
+++ b/src/components/loginForm.astro
@@ -55,6 +55,7 @@
                     >Registrarse</button
                 >
                 <button
+                    onclick="window.location.href='/cinema'"
                     type="submit"
                     class="w-auto bg-transparent hover:bg-lime-400 border border-solid border-lime-400 py-2 px-5 rounded-md text-lime-400 hover:text-principal font-bold text-xl duration-300"
                     >Iniciar Sesión</button
