--- a/src/pages/festivals.astro
+++ b/src/pages/festivals.astro
@@ -1,6 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
+<head>
+  <meta charset="UTF-8" />
+  <title>Festivales</title>
+</head>
 
 <Layout>
   <div class="container mx-auto text-center mt-36 mb-5">
