--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 import BannerHorizontal from '../assets/banners/BannerHorizontal.png';
 import faqImg from '../assets/faqImg.png';
+import Sottcial from './sottcial.astro';
+
 ---
 <head>
     <meta charset="UTF-8" />
@@ -99,8 +101,10 @@ import faqImg from '../assets/faqImg.png';
       </div> -->
 
       <div class="flex justify-center mb-12 w-full">
-        <img src={BannerHorizontal.src} alt="Banner Horizontal" class="w-full h-auto" />
-    </div>
+        <a href="/sottcial">
+          <img src={BannerHorizontal.src} alt="Banner Horizontal" class="w-full h-auto" />   
+        </a>
+      </div>
     
 
       <section class="w-full px-8">
