--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -68,12 +68,6 @@ onMount(() => {
 
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-4 ml-20">
-      <!-- <a href="/details" class="nav-link hover:text-white text-gray-400 relative"
-      >ARIADNE<span class="nav-underline"></span></a
-      >
-      <a href="/creators" class="nav-link hover:text-white text-gray-400 relative"
-      >CREADORES<span class="nav-underline"></span></a
-      > -->
       <a href="/cinema" class="nav-link hover:text-white text-gray-400 relative"
         >Cinema<span class="nav-underline"></span></a
       >
@@ -151,15 +145,9 @@ onMount(() => {
   <!-- Mobile Menu -->
   <div
     id="mobile-menu"
-    class="hidden fixed top-16 left-0 w-full bg-secundario md:hidden z-40 transition-transform transform duration-300"
+    class="hidden fixed top-26 left-0 w-full bg-secundario md:hidden z-40 transition-transform transform duration-300"
   >
     <div class="flex flex-col space-y-2 py-4 px-4 justify-center items-center">
-      <!-- <a href="/details" class="nav-link hover:text-gray-300 text-gray-400"
-        >ARIADNE</a
-      >
-      <a href="/creators" class="nav-link hover:text-gray-300 text-gray-400"
-        >CREADORES</a
-      > -->
       <a href="/cinema" class="nav-link hover:text-gray-300 text-gray-400">Cinema</a>
       <a href="/festivals" class="nav-link hover:text-gray-300 text-gray-400"
         >Festivales</a
@@ -168,9 +156,11 @@ onMount(() => {
         >Academia</a
       >
       <a href="/tv" class="nav-link hover:text-gray-300 text-gray-400">TV</a>
-      <a href="/premiere" class="nav-link hover:text-gray-300 text-gray-400"
-        >Premiere</a
-      >
+      <a href="/premiere" class="nav-link premiere-link text-gray-400 flex items-center">
+        Premiere
+        <span class="premiere-badge">¡Nuevo!</span>
+        <span class="nav-underline"></span>
+      </a>
       <hr class="border-gray-600 w-full my-2" />
       <button
         class="bg-transparent text-gray-400 font-semibold py-2 hover:border-transparent rounded"
@@ -179,11 +169,12 @@ onMount(() => {
         CONTÁCTANOS
       </button>
 
-      <button
-        class="bg-transparent text-white font-semibold hover:text-white py-2 px-4 border border-gray-500 hover:border-transparent hover:bg-gray-500 transition duration-400 rounded-md"
+      <a
+        href="/login"
+        class="cursor-pointer bg-transparent text-white font-semibold hover:text-lime-400 py-2 px-4 border border-gray-500 hover:border-transparent hover:bg-gray-500 duration-300 rounded-md"
       >
         INGRESAR
-      </button>
+      </a>
     </div>
   </div>
 
@@ -217,13 +208,13 @@ onMount(() => {
 
   .premiere-badge {
     position: absolute;
-    top: -10px;
-    right: -20px;
+    bottom: 0.2rem;
+    left: 5rem;
     background-color: #f39c12;
     color: white;
     font-size: 0.6rem;
     font-weight: bold;
-    padding: 2px 6px;
+    padding: 0 6px;
     border-radius: 8px;
     text-transform: uppercase;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
