--- a/src/components/loginForm.astro
+++ b/src/components/loginForm.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="h-screen w-auto bg-principal flex items-center relative">
+<div class="h-screen w-auto bg-principal flex flex-col items-center relative overflow-hidden">
     <img
         src="/src/assets/logo/Logo_Wahu_TodoGris.png"
         alt="TodoGris"
@@ -10,20 +10,20 @@
         style="transform: translateX(-0%);"
     />
 
-    <div class="absolute -translate-x-36 top-44 w-3/4">
-        <div class="w-1/2 mx-auto text-lime-400">
-            <h1 class="text-8xl font-bold">Bienvenido</h1>
+    <div class="absolute lg:-translate-x-96 top-36 w-3/4 fade-in-up">
+        <div class="lg:w-1/2 mx-auto text-lime-400">
+            <h1 class="lg:text-8xl text-5xl font-bold">Bienvenido</h1>
             <div>
-                <h2 class="text-4xl font-thin">Inicia sesión con tu cuenta o crea una nueva</h2>
+                <h2 class="lg:text-4xl text-xl font-thin">Inicia sesión con tu cuenta o crea una nueva</h2>
             </div>
         </div>
     </div>
     <div
-        class="absolute bg-black bg-opacity-25 backdrop-blur-md py-12 rounded-xl border border-solid border-lime-400 right-1/4 bottom-0 -translate-y-1/3 translate-x-1/2 w-1/4"
+        class="fade-in-up absolute bg-black bg-opacity-25 backdrop-blur-md lg:py-12 pt-2 rounded-xl border border-solid border-lime-400 lg:right-1/4 bottom-0 lg:-translate-y-1/3 -translate-y-1/2 lg:translate-x-1/2 w-3/4 lg:w-1/4"
     >
-        <form action="" class="my-4 w-3/4 mx-auto">
-            <div class="mb-8">
-                <label for="email" class="block text-xl text-white"
+        <form action="" class="my-4 w-10/12 mx-auto">
+            <div class="lg:mb-8 mb-4">
+                <label for="email" class="block lg:text-xl text-white"
                     >Correo Electrónico</label
                 >
                 <input
@@ -32,11 +32,11 @@
                     type="email"
                     id="email"
                     name="email"
-                    class="mt-4 w-full px-3 py-3 bg-gray-400 bg-opacity-25 border border-transparent text-white shadow-inner shadow-black rounded-md focus:outline-none focus:ring-lime-400 focus:border-lime-400 sm:text-sm font-light text-2xl tracking-widest"
+                    class="lg:mt-4 w-full px-3 py-3 bg-gray-400 bg-opacity-25 border border-transparent text-white shadow-inner shadow-black rounded-md focus:outline-none focus:ring-lime-400 focus:border-lime-400 text-xs font-light lg:text-2xl tracking-widest"
                 />
             </div>
-            <div class="mb-8">
-                <label for="password" class="block text-xl text-white"
+            <div class="lg:mb-8">
+                <label for="password" class="block lg:text-xl text-white"
                     >Contraseña</label
                 >
                 <input
@@ -45,22 +45,39 @@
                     type="password"
                     id="password"
                     name="password"
-                    class="mt-4 block w-full px-3 py-3 bg-gray-400 bg-opacity-25 border border-transparent text-white shadow-inner shadow-black rounded-md focus:outline-none focus:ring-lime-400 focus:border-lime-400 sm:text-sm font-light text-2xl tracking-widest"
+                    class="lg:mt-4 block w-full px-3 py-3 bg-gray-400 bg-opacity-25 border border-transparent text-white shadow-inner shadow-black rounded-md focus:outline-none focus:ring-lime-400 focus:border-lime-400 text-xs font-light lg:text-2xl tracking-widest"
                 />
             </div>
-            <div class="flex items-center justify-around">
+            <div class="flex items-center mt-8 justify-around">
                 <button
                     type="submit"
-                    class="w-auto bg-transparent py-2 px-5 rounded-md text-white hover:text-lime-400 text-xl duration-300"
+                    class="w-auto bg-transparent py-2 lg:px-5 rounded-md text-white hover:text-lime-400 lg:text-xl duration-300"
                     >Registrarse</button
                 >
                 <button
                     onclick="window.location.href='/cinema'"
                     type="submit"
-                    class="w-auto bg-transparent hover:bg-lime-400 border border-solid border-lime-400 py-2 px-5 rounded-md text-lime-400 hover:text-principal font-bold text-xl duration-300"
+                    class="w-auto bg-transparent hover:bg-lime-400 border border-solid border-lime-400 py-2 px-2 lg:px-5 rounded-md text-lime-400 hover:text-principal font-bold text-xs lg:text-xl duration-300"
                     >Iniciar Sesión</button
                 >
             </div>
         </form>
     </div>
 </div>
+
+<style>
+    @keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30%);
+    transform: translateX(50%);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-in-up {
+  animation: slideUp 1s ease-out forwards;
+}
+</style>
