--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -158,7 +158,7 @@ onMount(() => {
       <a href="/tv" class="nav-link hover:text-gray-300 text-gray-400">TV</a>
       <a href="/premiere" class="nav-link premiere-link text-gray-400 flex items-center">
         Premiere
-        <span class="premiere-badge">¡Nuevo!</span>
+        <span class="premiere-badge-movil">¡Nuevo!</span>
         <span class="nav-underline"></span>
       </a>
       <hr class="border-gray-600 w-full my-2" />
@@ -205,8 +205,7 @@ onMount(() => {
   .premiere-link {
     position: relative;
   }
-
-  .premiere-badge {
+  .premiere-badge-movil {
     position: absolute;
     bottom: 0.2rem;
     left: 5rem;
@@ -215,6 +214,21 @@ onMount(() => {
     font-size: 0.6rem;
     font-weight: bold;
     padding: 0 6px;
+    border-radius: 8px;
+    text-transform: uppercase;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    animation: pulse 2s infinite;
+  }
+
+  .premiere-badge {
+    position: absolute;
+    top: -15px;
+    right: -20px;
+    background-color: #f39c12;
+    color: white;
+    font-size: 0.6rem;
+    font-weight: bold;
+    padding: 2px 6px;
     border-radius: 8px;
     text-transform: uppercase;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
